# minds_RL

./: .gitignore  README.md  continuous_runner.py  pytest.ini  rl_config.py  run_experiment.py  run_state.json  verifiers_adapter.py
.github/workflows/: analysis.yml  ci.yml  continuous_train.yml  deploy-pages.yml  eval.yml  integration.yml
Claude/: context_prompt.txt  inference.py  introspection_test.py  thought_alignment.py
configs/: ci_test.toml  multi_task.toml  train_entropy_intuition.toml  train_ghost.toml  train_gradient_intuition.toml  train_prophet.toml  train_self_pred.toml
custom_utils/: __init__.py  pyproject.toml  renderer.py  shadow_utils.py  trainer.py
data/: current_checkpoint.txt  samples.tsv  training_history.jsonl
docs/: 404.html  _config.yml  index.html  technical_details.html  tinker_integration.md
environments/: README.md  rl_datasets.py
environments/entropy_intuition/: README.md  entropy_intuition.py  pyproject.toml
environments/entropy_intuition/entropy_intuition/: __init__.py  entropy_intuition.py
environments/ghost_trace/: README.md  __init__.py  ghost_trace.py  pyproject.toml
environments/ghost_trace/ghost_trace/: __init__.py  ghost_trace.py  word_bank.txt
environments/gradient_intuition/: README.md  gradient_intuition.py  pyproject.toml  utils.py
environments/gradient_intuition/gradient_intuition/: __init__.py  gradient_intuition.py  probes.py
environments/gradient_prophet/: README.md  __init__.py  data_gen.py  gradient_prophet.py  pyproject.toml
environments/gradient_prophet/gradient_prophet/: __init__.py  gradient_prophet.py
environments/self_prediction/: README.md  pyproject.toml  self_prediction.py
environments/self_prediction/self_prediction/: __init__.py  self_prediction.py
evals/: README.md  __init__.py  analysis.py  deception.py  eval_calibration_static.py  eval_ghost_ood.py  eval_ghost_static.py  eval_math_static.py  eval_sanity_check.py  eval_utils.py  word_bank_ood.txt
examples/: env_runner.py  sample.py
experiments/: self_prediction_rlvr.py
experiments/Claude/: context_prompt.txt  general_prompt1.txt  general_prompt2.txt  inference.py  introspection_test.py  thought_alignment.py
outputs/: metrics.json
outputs/20251212_204005/multi_task/: checkpoints.jsonl  code.diff  config.json  metrics.jsonl
outputs/20251213_204622/multi_task/: checkpoints.jsonl  config.json  metrics.jsonl
tests/: conftest.py  test_environment_logic.py  test_envs.py  test_full_training_run.py  test_logprob_extraction.py  test_self_prediction_rlvr.py
tinker/: source.txt
tinker_cookbook/: __init__.py  renderers.py  tokenizers.py
tinker_cookbook/recipes/verifiers_rl/: evaluate.py
tinker_cookbook/rl/: __init__.py  types.py
tinker_info/: docs.txt  verifiers.txt
verifiers/: pyproject.toml
verifiers/verifiers/: __init__.py  shadow_utils.py  trainer.py  utils.py
