[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-utils"
version = "0.0.0"
description = "Project-specific training utilities"
requires-python = ">=3.10"
dependencies = [
  "verifiers",
  "torch",
  "transformers>=4.44",
  "datasets>=2",
  "peft",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_utils"]
