[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradient-intuition-env"
version = "0.0.0"
description = "Gradient intuition wrapper environment"
dependencies = [
  "verifiers",
  "datasets",
  "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["gradient_intuition"]
