[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-prediction"
version = "0.0.0"
description = "Self-prediction verifier environment"
dependencies = ["verifiers"]

[tool.hatch.build]
include = ["self_prediction.py", "__init__.py"]

[tool.hatch.build.targets.wheel]
packages = ["self_prediction"]
