[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-prediction"
version = "0.0.0"
description = "Self-prediction verifier environment"
dependencies = ["verifiers", "datasets"]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "tomli; python_version < '3.11'",
    "transformers>=4.44",
]

[tool.hatch.build.targets.wheel]
packages = ["self_prediction"]
